[project]
name = "WeChat Tools"
version = "0.1.0"
description = "一个 PC 端微信的辅助工具"
authors = [
    {name = "grwang", email = "im@grwa.ng"},
]
dependencies = [
    "pywin32>=306",
    "pymem>=1.13.0",
    "pycryptodome>=3.19.0",
    "typer>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
